Fix img overflow

--- a/frontend/kinnie-playlist/src/elements/latest/Vote.css
+++ b/frontend/kinnie-playlist/src/elements/latest/Vote.css
@@ -8,13 +8,13 @@
 .Vote-image-container {
     width: 50px;
     height: 50px;
-    overflow: hidden;
+    overflow: visible;
     margin: 7px;
 }
 
 .Vote-image {
-    width: 100%;
-    height: 100%;
+    width: 50px;
+    height: 50px;
     object-fit: cover;
     border: none;
 }
